2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Rename 'tries' to 'dumps', it is a hash of
	  timestamps, each value is an array of try.
	* perl/Amanda/Report/human.pm: Use 'dumps'.
	* perl/Amanda/Report/postscript.pm: Use 'dumps'.
	* perl/Amanda/Report/xml.pm: Use 'dumps'.
	* contrib/amreport.rnc: Add 'dumps'
	* server-src/amreport.pl: Use 'dumps'
	* installcheck/amreport.pl: Check 'dumps'
	* installcheck/Amanda_Report.pl: Check 'dumps'

2010-06-09 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: remove Provides from main section,
	   remove amanda-client from server provides section.

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (check_data_path): New method to check
	  the data_path.
	* server-src/driver.c: Check FAILED result after PORT command.
	* server-src/driverio.c: Send data_path in taper PORT-WRITE command.
	* server-src/taper.pl: Parse data_path in PORT-WRITE command, call the
	  scribe check_data_path method.
	* installcheck/taper.pl: Test it.

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Allow negative etimeout.

2010-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndml_agent.c: add INADDR_NONE
	* ndmp-src/ndmos_glib.h: remove solaris-specific conditional

2010-06-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: New fe_amindexd_quote_label.
	* common-src/amfeatures.c: fe_amindexd_quote_label.
	* perl/Amanda/Feature.pod: fe_amindexd_quote_label.
	* server-src/amindexd.c: Quote label if fe_amindexd_quote_label.
	* recover-src/amrecover.c: Add debugging statement.
	* recover-src/display_commands.c: Parse quoted label.
	* recover-src/extract_list.c: Parse quoted label.

2010-06-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Scan.pm: Subsitute "all slots have been loaded"
	  by "label '$label' not found" for old changer scripts.
